add the news detail screen

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -161,6 +161,12 @@
     "news1Title": "استضافت شركة رويال الصناعية التجارية ممثلة بالحاج مازن زغير مدير العلاقات العامة والسيد",
     "news2Title": "استضافت شركة رويال الصناعية التجارية ممثلة بالحاج مازن زغير مدير العلاقات العامة والسيد",
     "news3Title": "استضافت شركة رويال الصناعية التجارية ممثلة بالحاج مازن زغير مدير العلاقات العامة والسيد",
+    "news1Subtitle": "شركة رويال تستضيف وفداً من مديرية الدفاع المدني",
+    "news2Subtitle": "شركة رويال تستضيف وفداً من مديرية الدفاع المدني",
+    "news3Subtitle": "شركة رويال تستضيف وفداً من مديرية الدفاع المدني",
+    "news1Content": "استضافت شركة رويال الصناعية التجارية ممثلة بالحاج مازن زغير مدير العلاقات العامة والسيد غسان غيث مدير شؤون الموظفين و...\n\nتضمنت هذه الزيارة اجتماعاً مع إدارة الشركة وخلال اللقاء تم تسليم درع الدفاع المدني تقديراً لجهود الشركة في دعم الدفاع المدني. وقدمت إدارة الشركة الشكر للدفاع المدني على جهودهم المبذولة.",
+    "news2Content": "استضافت شركة رويال الصناعية التجارية ممثلة بالحاج مازن زغير مدير العلاقات العامة والسيد غسان غيث مدير شؤون الموظفين و...\n\nتضمنت هذه الزيارة اجتماعاً مع إدارة الشركة وخلال اللقاء تم تسليم درع الدفاع المدني تقديراً لجهود الشركة في دعم الدفاع المدني. وقدمت إدارة الشركة الشكر للدفاع المدني على جهودهم المبذولة.",
+    "news3Content": "استضافت شركة رويال الصناعية التجارية ممثلة بالحاج مازن زغير مدير العلاقات العامة والسيد غسان غيث مدير شؤون الموظفين و...\n\nتضمنت هذه الزيارة اجتماعاً مع إدارة الشركة وخلال اللقاء تم تسليم درع الدفاع المدني تقديراً لجهود الشركة في دعم الدفاع المدني. وقدمت إدارة الشركة الشكر للدفاع المدني على جهودهم المبذولة.",
     "newsTitle": "الأخبار",
     "@newsTitle": {
         "description": "عنوان قسم أو صفحة الأخبار"
@@ -176,5 +182,13 @@
     },
     "@news3Title": {
         "description": "Title for the third news item on the news page"
+    },
+    "previousNews": "الخبر السابق",
+    "@previousNews": {
+        "description": "Label for previous news button in details page"
+    },
+    "nextNews": " الخبرالتالي",
+    "@nextNews": {
+        "description": "Label for next news button in details page"
     }
 }
