--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -255,6 +255,12 @@
     "news1Title": "Royal Industrial Trading Company hosted Mr. Mazen Zghair, Public Relations Manager, and Mr.",
     "news2Title": "Royal Industrial Trading Company hosted Mr. Mazen Zghair, Public Relations Manager, and Mr.",
     "news3Title": "Royal Industrial Trading Company hosted Mr. Mazen Zghair, Public Relations Manager, and Mr.",
+    "news1Subtitle": "Royal hosts a delegation from the Civil Defense Directorate",
+    "news2Subtitle": "Royal hosts a delegation from the Civil Defense Directorate",
+    "news3Subtitle": "Royal hosts a delegation from the Civil Defense Directorate",
+    "news1Content": "Royal Industrial Trading Company hosted Mr. Mazen Zghair, Public Relations Manager, and Mr. Ghassan Ghaith, HR Manager...\n\nThis visit included a meeting with the company's management, during which the Civil Defense Shield was presented in appreciation of the company's efforts in supporting the Civil Defense. The company management thanked the Civil Defense for their efforts.",
+    "news2Content": "Royal Industrial Trading Company hosted Mr. Mazen Zghair, Public Relations Manager, and Mr. Ghassan Ghaith, HR Manager...\n\nThis visit included a meeting with the company's management, during which the Civil Defense Shield was presented in appreciation of the company's efforts in supporting the Civil Defense. The company management thanked the Civil Defense for their efforts.",
+    "news3Content": "Royal Industrial Trading Company hosted Mr. Mazen Zghair, Public Relations Manager, and Mr. Ghassan Ghaith, HR Manager...\n\nThis visit included a meeting with the company's management, during which the Civil Defense Shield was presented in appreciation of the company's efforts in supporting the Civil Defense. The company management thanked the Civil Defense for their efforts.",
     "@newsPageTitle": {
         "description": "Title for the news page"
     },
@@ -270,5 +276,13 @@
     "newsTitle": "News",
     "@newsTitle": {
         "description": "Title for the news section or page"
+    },
+    "previousNews": "Previous News",
+    "@previousNews": {
+        "description": "Label for previous news button in details page"
+    },
+    "nextNews": "Next News",
+    "@nextNews": {
+        "description": "Label for next news button in details page"
     }
 }
