--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -292,5 +292,13 @@
     "itemKitchenSinkUnitPACK": "PACK",
     "itemOrderNumber": "#5022201",
     "itemOrderTitle": "Order",
-    "itemSave": "Save"
+    "itemSave": "Save",
+    "ordersCurrent": "Current Orders",
+    "ordersArchive": "Order Archive",
+    "orderDateSample": "12/12/2022",
+    "orderNumberSample": "#5022201",
+    "orderItemsCount": "28 items",
+    "orderStatus": "Order Status",
+    "orderEdit": "Edit",
+    "orderDelete": "Delete"
 }
