why royal page added

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -275,5 +275,21 @@
     "notificationUpdate": "تحديث",
     "notificationUpdateMsg": "تم إضافة كتالوج في قائمة التنزيلات",
     "notificationEvent": "حدث",
-    "notificationEventMsg": "زورونا في حدث الأعمال الإنشائية"
+    "notificationEventMsg": "زورونا في حدث الأعمال الإنشائية",
+    "whyJoinRoyalTitle": "لماذا تنضم إلى رويال؟",
+    "@whyJoinRoyalTitle": {
+        "description": "عنوان صفحة لماذا تنضم إلى رويال"
+    },
+    "whyJoinRoyalContent": "سلوچان\n\nإن هذا الكتاب حسن الطوية فهو ينبهك منذ البداية إلى لا تستهدف من وراء صفحاته إلا ما ينفع القلب والخاص، ولم أرد من خدمتك أو إعجابك شيئًا، فإن مواهبي تعجز عن تحقيق مثل هذا الغاية.. لقد خصصته لمجموعة الخاصة من أهلي وأصدقائي حتى إذا ما اقتنعوني استطاعوا أن يحدثوا بك صورة طباعي وموهبتي. سيجدون خطوطًا التي خططتها في هذا الكتاب مرآة نفسي وموهبتي، حتى لو لم أكن صادقًا أو أظهر عواطفي أمامهم، فقد عملت على إظهار نفسي وإظهارها بمنطقة شفافة، فإني لا أدري إن كنت في أوسط صور الطبيعة العادية بدون تكلف ولا تزيين، أم أنني الذي أصور نفسي بألوان وأسمح لنفسي بأن تصبغها من العرف والعادات.\n\nيتضح في مقدمة كتاب ابن الجوزي صيد الخاطر إنما كتب هذه الفصول ليسجل فيها خواطره وانطباعاته وتجارب وعلاقاته عن الأشياء. وهذه الخواطر ليست وليدة البحث والدريس العميق وإنما هي خواطر تأتي وتولد وتنزل سريعًا إن لم تُسجل، لهذا سعى إلى تدوينها في هذا الكتاب وسماه (صيد الخاطر)، كما سمى قبله ابن أحمد أشهر كتّاب في المنطقة الأدبية في العصر الحديث (صيد الخاطر)، وهذا يعني أن مفهوم هذه الفصول وما فيها خواطر عما يُقال أو أن ذلك وتمصوا تجارب نفسه وما توصل إليه من أفكار تتعلق بالحياة والمجتمع.",
+    "@whyJoinRoyalContent": {
+        "description": "محتوى صفحة لماذا تنضم إلى رويال"
+    },
+    "joinButton": "إنضم",
+    "@joinButton": {
+        "description": "زر الانضمام لصفحة لماذا تنضم إلى رويال"
+    },
+    "notNowButton": "ليس الآن",
+    "@notNowButton": {
+        "description": "زر ليس الآن لصفحة لماذا تنضم إلى رويال"
+    }
 }
